Fix: Utilities/Aligner all situations covered

--- a/src/scss/helpers/utilities/_aligner.scss
+++ b/src/scss/helpers/utilities/_aligner.scss
@@ -2,6 +2,32 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+
+	&.items-top {
+		align-items: flex-start;
+	}
+
+	&.items-bottom {
+		align-items: flex-end;
+	}
+
+	&.items-left {
+		justify-content: flex-start;
+	}
+
+	&.items-right {
+		justify-content: flex-end;
+	}
+
+
+	//Each Item
+	.item-left {
+		margin-right:auto;
+	}
+
+	.item-right {
+		margin-left:auto;
+	}
 			
 	.item-top {
 		align-self: flex-start;
